--- a/style/style.css
+++ b/style/style.css
@@ -8,17 +8,17 @@
   transition: all 100ms ease-in;
 }
 html{
-	background: #222048;
+	background: #14132c;
 }
 .feliz{
   width: 100%;
   font-family: 'Pacifico', cursive;
- font-size: 100px;
-  font-weight: 700;
-  color: #f48fb1;
+ font-size: 90px;
+  font-weight: 100;
+  color: #d8e05f;
   text-align: center;
  position: absolute;
- top: 50%;
+ top: 43%;
   opacity: 0;
   animation: vem_feliz 2s ease-in-out 7s forwards;
 }
@@ -69,7 +69,7 @@ span.cuatro:before{
   z-index: -1;
   animation: entrega_balao 1s ease-in-out 4s;
 }
-.balao{
+.balao{ /*bola del globoxs*/
   width: 100px;
   height: 100px;
   display: block;
@@ -82,7 +82,7 @@ span.cuatro:before{
   margin-right: -200px;
   animation: vem_e_vai_balao 10s ease-in-out forwards;
 }
-.balao:before{
+.balao:before{ /*donde se amarra cordon*/
   content: '';
   width: 0;
   height: 0;
@@ -95,7 +95,7 @@ span.cuatro:before{
   bottom: -10px;
   z-index: -1;
 }
-.balao:after{
+.balao:after{ /*lazo del globo*/
   content: '';
  width: 4px;
   height: 100px;
@@ -195,18 +195,18 @@ span.cuatro:before{
   display: block;
   border-radius: 50%;
   background: #fff;
- /* position: absolute;*/
- /* top: -15px;*/
- /* right: 10px;*/
+  position: absolute;
+  top: -15px;
+  right: 10px;
 }
-/*a.author{/*
-  /*font-size: 12px;*/
-  /*text-decoration: none;*/
-  /*color: #f47c7c;*/
-  /*position: fixed;*/
-  /*bottom: 10px;*/
-  /*right: 10px;*/
-/*}*/
+a.author{
+  font-size: 12px;
+  text-decoration: none;
+  color: #f47c7c;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+}
 
 @keyframes vem_2017 {
   0% {
@@ -290,27 +290,27 @@ span.cuatro:before{
   80%{
     margin-top: 0px;
     margin-left: 0px;
-   /* opacity: 1;*/
+    opacity: 1;
     width: 10px;
     height: 10px;
     display: block;
     border-radius: 50%;
-   /* transform: scale(0.2);*/
+    transform: scale(0.2);
   }
-  /*100%{*/
-    /*opacity: 1;*/
-   /* width: 10px;*/
-   /* height: 10px;*/
-   /* display: block;*/
-   /* border-radius: 50%;*/
-   /* transform: scale(1);*/
-  /*}*/
-/*}*/
-/*@keyframes estoura_fogos {*/
-  /*0% {*/
-   /* opacity: 0;*/
-  /*}*/
-  /*100% {*/
-    /*opacity: 1;*/
- /* }*/
+  100%{
+    opacity: 1;
+    width: 10px;
+    height: 10px;
+    display: block;
+    border-radius: 50%;
+    transform: scale(1);
+  }
+}
+@keyframes estoura_fogos {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
